# covid-app

./: .gitignore  Dockerfile  README.md  app1.py  app2.py  app_conf_with_nginx.yaml  dash_server.py  deploy_on_kubernetes.yaml  django_conf.yaml  docker-compose.yml  homepage.py  index.py  ingress_conf.yaml  navbar.py  preprocessing.py  pyproject.toml  start_server.sh
.github/workflows/: docker-image.yml
app/: Dockerfile  app1.py  app2.py  app3.py  homepage.py  index.py  preprocessing.py
