[tool.poetry]
name = "covid-worldwide"
version = "0.1.0"
description = ""
authors = ["Marco Inacio <m@marcoinacio.com>"]
license = "GNU GPL Affero 3"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
gunicorn = "^20.1.0"
dash-bootstrap-components = "^0.12.2"
statsmodels = "^0.12.2"
dash = "^1.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
