[tool.poetry]
name = "covid-worldwide"
version = "0.1.0"
description = ""
authors = ["Marco Inacio <m@marcoinacio.com>"]
license = "GNU GPL Affero 3"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "*"
gunicorn = "*"
dash-bootstrap-components = "*"
statsmodels = "*"
dash = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
